src/main/java/com/example/app/error/ExceptionMessage.java
package com.example.app.error;



public class ExceptionMessage {
    public static final String OBJECT_NOT_FOUND = "OBJECT NOT FOUND";
    public static final String OBJECT_ALREADY_EXISTS = "OBJECT ALREADY EXISTS";
    public static final String OBJECT_ALREADY_DELETED = "OBJECT ALREADY DELETED";

}
